--- a/app/src/main/res/layout/layout_menu.xml
+++ b/app/src/main/res/layout/layout_menu.xml
@@ -8,7 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="50dp"
         android:orientation="vertical">
 
         <com.boss66.meetbusiness.widget.CircleImageView
@@ -31,13 +31,51 @@
             android:textSize="16.5sp" />
     </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/rl_top"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="64dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0"
+            android:drawablePadding="13.5dp"
+            android:drawableTop="@drawable/sel_main_active"
+            android:gravity="center_horizontal"
+            android:text="好友动态" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0"
+            android:drawablePadding="13.5dp"
+            android:drawableTop="@drawable/sel_main_msg"
+            android:gravity="center_horizontal"
+            android:text="消息" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.0"
+            android:drawablePadding="13.5dp"
+            android:drawableTop="@drawable/sel_main_private"
+            android:gravity="center_horizontal"
+            android:text="私信" />
+    </LinearLayout>
+
     <RadioGroup
         android:id="@+id/bottom_navigation_rg"
         android:layout_width="160dp"
         android:layout_height="320dp"
-        android:layout_below="@+id/rl_top"
+        android:layout_below="@+id/ll"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="60dp"
         android:orientation="vertical"
         android:weightSum="5">
 
