--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -9,6 +9,6 @@
     </declare-styleable>
 
     <declare-styleable name="SlidingMenu">
-        <attr name="rightPadding" />
+        <attr name="rightPadding" format="integer" />
     </declare-styleable>
 </resources>
