--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,24 +5,21 @@
     android:layout_width="wrap_content"
     android:layout_height="fill_parent"
     android:scrollbars="none">
-
+    <!--zhy:rightPadding="100dp"-->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:orientation="horizontal">
 
         <include layout="@layout/layout_menu" />
-
-        <FrameLayout
-            android:id="@+id/replaced_layout"
+        <!--<FrameLayout-->
+        <!--android:id="@+id/replaced_layout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+        <!--</FrameLayout>-->
+        <include
+            layout="@layout/view_home_pager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="主界面" />
-        </FrameLayout>
+            android:layout_height="match_parent"></include>
     </LinearLayout>
 </com.boss66.meetbusiness.widget.SlidingMenu>
