--- a/app/src/main/res/layout/layout_menu.xml
+++ b/app/src/main/res/layout/layout_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -42,6 +43,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/tv_active"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.0"
@@ -51,6 +53,7 @@
             android:text="好友动态" />
 
         <TextView
+            android:id="@+id/tv_msg"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.0"
@@ -60,6 +63,7 @@
             android:text="消息" />
 
         <TextView
+            android:id="@+id/tv_info"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1.0"
