--- a/app/src/main/res/values/umeng_socialize_strings.xml
+++ b/app/src/main/res/values/umeng_socialize_strings.xml
@@ -70,4 +70,7 @@
     <string name="umeng_socialize_share">分享</string>
     <string name="com_facebook_loading">Loading...</string>
 
+    <string name="main_focus">关注</string>
+    <string name="main_discover">发现</string>
+    <string name="main_near">附近</string>
 </resources>
