--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,11 @@
         <item name="android:windowNoTitle">true</item>
     </style>
 
+    <declare-styleable name="RoundImageView">
+        <attr name="round_borderRadius" format="dimension" />
+        <attr name="round_type" format="integer" />
+    </declare-styleable>
+
     <style name="AppTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/material</item>
         <item name="colorPrimaryDark">@color/material_dark</item>
