--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,4 +48,10 @@
     <color name="material_dark">#303F9F</color>
     <!-- toolbar-->
     <color name="material">#3F51B5</color>
+
+    <color name="white_pressed">#FFCFCFCF</color>
+    <color name="purple_normal">#9932CC</color>
+    <color name="purple_pressed">#9F79EE</color>
+    <color name="edit_red">#ED6356</color>
+
 </resources>
