--- a/app/src/main/res/values/umeng_socialize_strings.xml
+++ b/app/src/main/res/values/umeng_socialize_strings.xml
@@ -73,4 +73,9 @@
     <string name="main_focus">关注</string>
     <string name="main_discover">发现</string>
     <string name="main_near">附近</string>
+
+    <string name="share_platform_qq">QQ好友</string>
+    <string name="share_platform_zone">QQ空间</string>
+    <string name="share_platform_wx">微信好友</string>
+    <string name="share_platform_wx_circle">微信朋友圈</string>
 </resources>
