添加视频编辑

--- a/app/src/main/res/layout/activity_share_video.xml
+++ b/app/src/main/res/layout/activity_share_video.xml
@@ -32,7 +32,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="11dp"
-            android:background="@color/record_progress_red"
+            android:background="@drawable/bg_orange_btn"
             android:padding="10dp"
             android:text="发布"
             android:textColor="@color/white"
