--- a/app/src/main/res/values/umeng_socialize_strings.xml
+++ b/app/src/main/res/values/umeng_socialize_strings.xml
@@ -78,4 +78,8 @@
     <string name="share_platform_zone">QQ空间</string>
     <string name="share_platform_wx">微信好友</string>
     <string name="share_platform_wx_circle">微信朋友圈</string>
+
+    <string name="video_yj">滤镜</string>
+    <string name="video_voice">音效</string>
+    <string name="video_bg">封面</string>
 </resources>
