--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,7 @@
 
     <dimen name="item_height">60dp</dimen>
     <dimen name="item_margin">10dp</dimen>
+
+    <dimen name="default_divider_height">1dp</dimen>
+    <dimen name="default_divider_padding">4dp</dimen>
 </resources>
