--- a/app/src/main/res/layout/activity_edit_video.xml
+++ b/app/src/main/res/layout/activity_edit_video.xml
@@ -77,6 +77,14 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:visibility="gone"></include>
+
+        <include
+            android:id="@+id/edit_video_tailor"
+            layout="@layout/video_tailor_bottom_bar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:visibility="gone"></include>
     </RelativeLayout>
 
     <LinearLayout
