--- a/app/src/main/res/layout/activity_record_video.xml
+++ b/app/src/main/res/layout/activity_record_video.xml
@@ -20,9 +20,8 @@
             android:id="@+id/actionbar"
             layout="@layout/record_titlebar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:layout_marginTop="@dimen/dp_22" />
+            android:layout_height="50dp"
+            android:layout_gravity="top" />
 
 
     </RelativeLayout>
