--- a/app/src/main/res/layout/record_titlebar.xml
+++ b/app/src/main/res/layout/record_titlebar.xml
@@ -7,9 +7,10 @@
     <ImageView
         android:id="@+id/iv_close"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="17.5dp"
+        android:paddingLeft="17.5dp"
+        android:paddingRight="17.5dp"
         android:src="@drawable/shot_close" />
 
     <Chronometer
@@ -27,22 +28,24 @@
     <ImageView
         android:id="@+id/switch_cam"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:layout_gravity="center_vertical"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/shot_lens" />
+        android:paddingLeft="17.5dp"
+        android:paddingRight="17.5dp"
+        android:src="@drawable/shot_lens" />
 
     <ImageView
         android:id="@+id/flash"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerVertical="true"
         android:layout_gravity="center_vertical"
-        android:layout_marginRight="27.5dp"
         android:layout_toLeftOf="@id/switch_cam"
-        android:background="@drawable/shot_flashlight"></ImageView>
+        android:paddingLeft="17.5dp"
+        android:paddingRight="17.5dp"
+        android:src="@drawable/shot_flashlight"></ImageView>
 
 
 </RelativeLayout>
