--- a/app/src/main/res/layout/video_filter_bottom_bar.xml
+++ b/app/src/main/res/layout/video_filter_bottom_bar.xml
@@ -1,41 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/dp_22"
-    android:layout_marginTop="@dimen/dp_22"
     android:orientation="horizontal">
 
-    <com.boss66.meetbusiness.widget.RoundImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginLeft="@dimen/dp_11"
-        android:src="@drawable/person"
-        app:round_borderRadius="8dp"
-        app:round_type="1" />
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/rv_filter"
+      android:background="@color/line_color_gray_d1"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content">
 
-    <com.boss66.meetbusiness.widget.RoundImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginLeft="@dimen/dp_11"
-        android:src="@drawable/person"
-        app:round_borderRadius="8dp"
-        app:round_type="1" />
-
-    <com.boss66.meetbusiness.widget.RoundImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginLeft="@dimen/dp_11"
-        android:src="@drawable/person"
-        app:round_borderRadius="8dp"
-        app:round_type="1" />
-
-    <com.boss66.meetbusiness.widget.RoundImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginLeft="@dimen/dp_11"
-        android:src="@drawable/person"
-        app:round_borderRadius="8dp"
-        app:round_type="1" />
+  </android.support.v7.widget.RecyclerView>
 </LinearLayout>
