--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,12 +3,12 @@
     xmlns:zhy="http://schemas.android.com/apk/res-auto"
     android:id="@+id/id_menu"
     android:layout_width="wrap_content"
-    android:layout_height="fill_parent"
+    android:layout_height="match_parent"
     android:scrollbars="none">
     <!--zhy:rightPadding="100dp"-->
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:orientation="horizontal">
 
         <include layout="@layout/layout_menu" />
