--- a/app/src/main/res/layout/layout_menu.xml
+++ b/app/src/main/res/layout/layout_menu.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/white"
-    android:layout_height="match_parent">
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/rl_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="40dp"
         android:orientation="vertical">
 
         <com.boss66.meetbusiness.widget.CircleImageView
@@ -36,10 +37,10 @@
         android:id="@+id/ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/rl_top"
+        android:layout_gravity="center_horizontal"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="40dp"
         android:orientation="horizontal">
 
         <TextView
@@ -75,13 +76,13 @@
 
     <RadioGroup
         android:id="@+id/bottom_navigation_rg"
-        android:layout_width="160dp"
-        android:layout_height="320dp"
-        android:layout_below="@+id/ll"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="40dp"
         android:orientation="vertical"
-        android:weightSum="5">
+        android:paddingRight="@dimen/dp_36"
+        android:weightSum="6">
 
         <RadioButton
             android:id="@+id/rb_setting"
@@ -113,6 +114,12 @@
             style="@style/MenuBtn"
             android:drawableLeft="@drawable/sel_main_shopping"
             android:text="@string/main_shopping_cart" />
+
+        <RadioButton
+            android:id="@+id/rb_order"
+            style="@style/MenuBtn"
+            android:drawableLeft="@drawable/sel_main_order"
+            android:text="@string/main_order" />
     </RadioGroup>
 
-</RelativeLayout>
+</LinearLayout>
