--- a/app/src/main/res/layout/video_tailor_bottom_bar.xml
+++ b/app/src/main/res/layout/video_tailor_bottom_bar.xml
@@ -6,9 +6,10 @@
 
     <RelativeLayout
         android:id="@+id/mainLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/gallery"
+        android:layout_centerHorizontal="true"
         android:layout_margin="17.5dp"
         android:gravity="center"
         android:orientation="vertical"
@@ -16,9 +17,8 @@
 
         <ImageView
             android:id="@+id/iv_video_bg"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/person" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </RelativeLayout>
 
     <!--<Gallery-->
