--- a/app/src/main/res/layout/video_tailor_bottom_bar.xml
+++ b/app/src/main/res/layout/video_tailor_bottom_bar.xml
@@ -3,22 +3,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    <!--android:layout_margin="17.5dp"-->
     <RelativeLayout
         android:id="@+id/mainLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/gallery"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/line"
         android:layout_centerHorizontal="true"
-        android:layout_margin="17.5dp"
-        android:gravity="center"
-        android:orientation="vertical"
         android:visibility="visible">
 
-        <ImageView
-            android:id="@+id/iv_video_bg"
+        <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true">
+
+            <ImageView
+                android:id="@+id/iv_video_bg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:scaleType="centerCrop" />
+
+            <TextView
+                android:id="@+id/tv_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:alpha="0.6"
+                android:background="@color/text_color_black"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                android:visibility="gone" />
+        </RelativeLayout>
+
     </RelativeLayout>
 
     <!--<Gallery-->
@@ -28,6 +46,17 @@
     <!--android:layout_above="@+id/ll_bar"-->
     <!--android:layout_marginLeft="@dimen/dp_11"-->
     <!--android:layout_marginRight="@dimen/dp_11"></Gallery>-->
+    <LinearLayout
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:layout_above="@+id/gallery"
+        android:layout_marginBottom="@dimen/dp_11"
+        android:background="@color/line_color_gray_d1"
+        android:orientation="horizontal">
+
+    </LinearLayout>
+
     <HorizontalScrollView
         android:id="@+id/gallery"
         android:layout_width="match_parent"
@@ -62,6 +91,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tv00"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/bg_edit_00"
@@ -71,6 +101,7 @@
                 android:textSize="40sp" />
 
             <TextView
+                android:id="@+id/tv01"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="@dimen/dp_11"
@@ -81,6 +112,7 @@
                 android:textSize="40sp" />
 
             <TextView
+                android:id="@+id/tv02"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="@dimen/dp_11"
