--- a/app/src/main/res/layout/activity_order_evaluate.xml
+++ b/app/src/main/res/layout/activity_order_evaluate.xml
@@ -1,54 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:lxhRatingBar="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
 
-    <android.support.design.widget.AppBarLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:padding="@dimen/dp_10">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tv_back"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:minHeight="?attr/actionBarSize"
-            android:paddingBottom="9dp"
-            android:paddingRight="@dimen/dp_10"
-            android:paddingTop="9dp"
-            app:layout_scrollFlags="scroll|enterAlways">
+            android:background="@drawable/nav_return" />
 
-            <TextView
-                android:id="@+id/tv_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/nav_return" />
+        <TextView
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/order_evaluate"
+            android:textColor="@color/text_color_black"
+            android:textSize="21sp" />
 
-            <TextView
-                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/order_evaluate"
-                android:textColor="@color/text_color_black"
-                android:textSize="21sp" />
+        <TextView
+            android:id="@+id/bt_upload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:background="@drawable/shape_btn_round_commit"
+            android:padding="@dimen/dp_10"
+            android:text="@string/order_evaluate_publish"
+            android:textColor="@color/white" />
 
-            <Button
-                android:id="@+id/bt_upload"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical"
-                android:background="@drawable/shape_btn_round_commit"
-                android:text="@string/order_evaluate_publish" />
+    </RelativeLayout>
 
-        </android.support.v7.widget.Toolbar>
-
-    </android.support.design.widget.AppBarLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/text_color_gray_a" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -77,18 +72,19 @@
                 android:textColor="@color/text_color_black"
                 android:textSize="18sp" />
 
-            <com.boss66.meetbusiness.widget.MyStarView
-                android:id="@+id/starBar"
-                android:layout_width="wrap_content"
+            <com.boss66.meetbusiness.widget.MyRatingBar
+                android:id="@+id/ratingBar"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                lxhRatingBar:canEdit="true"
-                lxhRatingBar:differentSize="false"
-                lxhRatingBar:dividerWidth="@dimen/x20"
-                lxhRatingBar:starCount="5"
-                lxhRatingBar:stateResId="@drawable/selector_comment_ratingbar"
-                lxhRatingBar:widthAndHeight="@dimen/x90" />
+                android:layout_gravity="center_vertical"
+                android:layout_margin="8dp"
+                app:srb_borderColor="@color/record_progress_red"
+                app:srb_fillColor="@color/record_progress_red"
+                app:srb_pressedBorderColor="@color/record_progress_red"
+                app:srb_pressedFillColor="@color/record_progress_red" />
 
         </LinearLayout>
+
 
         <EditText
             android:id="@+id/et_content"
@@ -116,9 +112,9 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="1dp"
+            android:layout_height="1px"
             android:background="@color/text_color_gray_a" />
 
     </LinearLayout>
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
