--- a/app/src/main/res/layout/video_tailor_bottom_bar.xml
+++ b/app/src/main/res/layout/video_tailor_bottom_bar.xml
@@ -19,14 +19,14 @@
 
             <ImageView
                 android:id="@+id/iv_video_bg"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_centerInParent="true"
                 android:scaleType="centerCrop" />
 
             <TextView
                 android:id="@+id/tv_content"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:alpha="0.6"
