--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -7,8 +7,8 @@
 
     <com.atgc.cotton.widget.RoundImageView
         android:id="@+id/iv_bg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="11dp"
         android:layout_marginRight="11dp"
