--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -78,4 +78,6 @@
     <color name="bg_color00">#91b7fe</color>
     <color name="bg_color01">#fd9191</color>
     <color name="bg_color02">#b3bdc7</color>
+    <color name="black_">#000000</color>
+    <color name="hint_text_color">#888888</color>
 </resources>
