--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,4 +29,15 @@
     <dimen name="sp_12">12sp</dimen>
     <dimen name="sp_14">14sp</dimen>
     <dimen name="sp_16">16sp</dimen>
+
+    <dimen name="size_200">200dp</dimen>
+    <dimen name="size_60">60dp</dimen>
+    <dimen name="circle_image_size_common">42.9dp</dimen>
+    <dimen name="spacing_common">14.3dp</dimen>
+
+
+    <dimen name="text_size_small">12.1sp</dimen>
+    <dimen name="text_size_common">13.2sp</dimen>
+    <dimen name="text_size_large">14.3sp</dimen>
+    <dimen name="text_size_more_large">16.5sp</dimen>
 </resources>
